H6 reduce hydrology normalization copy pressure [skip ci]